src/test/fixtures/syntax-error/error-1/Syntax.hp
export Syntax where

data Actors = 
  Looker(Analyst),
  Analyst(Alice, Bob),
  Intern(Bob, Jeff),
  Alice, Bob, Jeff;

data Actions = Reads, Deletes, Updates;

data Resources = 
  Claims(Finance),
  Finance(Customers, Companies),
  Customers(CCN), Companies(EMAIL, SSN),
  CCN, EMAIL, SSN;

jeff = ALLOW {
        Actors: Jefa // Nome incorreto
        Resources: CCN
        Actions: Reads
      };